SimpleComplex/Utils 1.x, 2018-07-29
-----------------------------------
- CLI environment use .ini file for registering/loading
  command providers.
- Release 1.8.

SimpleComplex/Utils 1.x, 2018-07-22
-----------------------------------
- CliEnvironment expose vendorDir property.

SimpleComplex/Utils 1.x, 2018-07-21
-----------------------------------
- CLI command provider hook; declare qualified class names
  of CliCommandInterface implementations
  in file [doc_root]/.utils_cli_command_providers.

SimpleComplex/Utils 1.x, 2018-07-20
-----------------------------------
- CliCommand support longer command name than visual 'midLine'.

SimpleComplex/Utils 1.x, 2018-06-30
-----------------------------------
- Time modifyDate() for sensible year and month addition/subtraction,
  and modifyTime() just to avoid rogueness of modify().
- Time helpers isLeapYear() and monthLengthDays().
- Time ISO-8601 and JSON formatters support milliseconds|microseconds precision.
- Time|TimeFreezable return type hints even when PHP return type invariance
  makes things look illogical.
- Static Time::checkTimezoneDefault().
- Time::setToLastDayOfMonth().
- TestHelper::log().
- Tests should use Utils::vendorDir() instead of declaring (easily wrong)
  PATH_VENDOR constant.
- Release 1.7.2.

SimpleComplex/Utils 1.x, 2018-06-24
-----------------------------------
- Major version last fixes (irregularity, however version 1.7 seem unused yet):
  deprecated classes PathFileList and PathFileListUnique removed from source,
  and PathList method clear() renamed (was reset()).
- Release 1.7.1.

SimpleComplex/Utils 1.x, 2018-06-24
-----------------------------------
- Utils pathReplaceDocumentRoot() replacer is now a class constant,
  and default is now [doc_root]; was [document_root].
- Utils pathReplaceDocumentRoot() new third parameter (bool) leading.
- Utils vendorDir(), relative to document root.
- PathList bug: has itemValue property; not customValue.